[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/scribbles.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/LoadingScreen.gd" type="Script" id=2]
[ext_resource path="res://raw_assets/textures/main_level_background.png" type="Texture" id=3]
[ext_resource path="res://UI/elements/bar_fill.png" type="Texture" id=4]
[ext_resource path="res://UI/elements/bar_border.png" type="Texture" id=5]
[ext_resource path="res://UI/themes/main_menu_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1024, 1024 )
modulate_color = Color( 0.482353, 0.478431, 0.478431, 1 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 1 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
tips = [ "tumors produce rot over time. destroy them", "insert certain items in a processor to receive special material used in machines", "machines are used to create goods that are bought at the vendor", "get seeds from amoebas", "bones are the only way to leave the nightmare" ]

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 75.0
margin_bottom = 39.0

[node name="LoadingLabel" type="Label" parent="Control/VBoxContainer"]
margin_right = 75.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Loading..."

[node name="LevelName" type="Label" parent="Control/VBoxContainer"]
margin_top = 26.0
margin_right = 75.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level Name"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -19.5
margin_right = 320.0
margin_bottom = 67.5
rect_clip_content = true

[node name="TipLabel" type="Label" parent="Control/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "Tip"

[node name="TipValue" type="Label" parent="Control/VBoxContainer2"]
margin_top = 26.0
margin_right = 320.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "tip goes here"
autowrap = true

[node name="ProgressBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -137.5
margin_top = -40.0
margin_right = 137.5
margin_bottom = -15.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0.596078, 0, 0, 1 )
nine_patch_stretch = true
